jquery-ui-custom.css
/* ... */
.ui-icon-seek-start { background-position: -80px -160px; }
.ui-icon-seek-first { background-position: -80px -160px; }
.ui-icon-stop { background-position: -96px -160px; }
.ui-icon-eject { background-position: -112px -160px; }
.ui-icon-volume-off { background-position: -128px -160px; }
.ui-icon-volume-on { background-position: -144px -160px; }
.ui-icon-power { background-position: 0 -176px; }
.ui-icon-signal-diag { background-position: -16px -176px; }
.ui-icon-signal { background-position: -32px -176px; }
.ui-icon-battery-0 { background-position: -48px -176px; }
.ui-icon-battery-1 { background-position: -64px -176px; }
.ui-icon-battery-2 { background-position: -80px -176px; }
.ui-icon-battery-3 { background-position: -96px -176px; }
.ui-icon-circle-plus { background-position: 0 -192px; }
.ui-icon-circle-minus { background-position: -16px -192px; }
.ui-icon-circle-close { background-position: -32px -192px; }
.ui-icon-circle-triangle-e { background-position: -48px -192px; }
.ui-icon-circle-triangle-s { background-position: -64px -192px; }
.ui-icon-circle-triangle-w { background-position: -80px -192px; }
.ui-icon-circle-triangle-n { background-position: -96px -192px; }
.ui-icon-circle-arrow-e { background-position: -112px -192px; }
.ui-icon-circle-arrow-s { background-position: -128px -192px; }
.ui-icon-circle-arrow-w { background-position: -144px -192px; }
.ui-icon-circle-arrow-n { background-position: -160px -192px; }
.ui-icon-circle-zoomin { background-position: -176px -192px; }
.ui-icon-circle-zoomout { background-position: -192px -192px; }
.ui-icon-circle-check { background-position: -208px -192px; }
.ui-icon-circlesmall-plus { background-position: 0 -208px; }
.ui-icon-circlesmall-minus { background-position: -16px -208px; }
.ui-icon-circlesmall-close { background-position: -32px -208px; }
.ui-icon-squaresmall-plus { background-position: -48px -208px; }
.ui-icon-squaresmall-minus { background-position: -64px -208px; }
.ui-icon-squaresmall-close { background-position: -80px -208px; }
.ui-icon-grip-dotted-vertical { background-position: 0 -224px; }
.ui-icon-grip-dotted-horizontal { background-position: -16px -224px; }
.ui-icon-grip-solid-vertical { background-position: -32px -224px; }
.ui-icon-grip-solid-horizontal { background-position: -48px -224px; }
.ui-icon-gripsmall-diagonal-se { background-position: -64px -224px; }
.ui-icon-grip-diagonal-se { background-position: -80px -224px; }
.ui-corner-all, .ui-corner-top, .ui-corner-left, .ui-corner-tl { -moz-border-radius-topleft: 4px; -webkit-border-top-left-radius: 4px; -khtml-border-top-left-radius: 4px; border-top-left-radius: 4px; }
.ui-corner-all, .ui-corner-top, .ui-corner-right, .ui-corner-tr { -moz-border-radius-topright: 4px; -webkit-border-top-right-radius: 4px; -khtml-border-top-right-radius: 4px; border-top-right-radius: 4px; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-left, .ui-corner-bl { -moz-border-radius-bottomleft: 4px; -webkit-border-bottom-left-radius: 4px; -khtml-border-bottom-left-radius: 4px; border-bottom-left-radius: 4px; }
.ui-corner-all, .ui-corner-bottom, .ui-corner-right, .ui-corner-br { -moz-border-radius-bottomright: 4px; -webkit-border-bottom-right-radius: 4px; -khtml-border-bottom-right-radius: 4px; border-bottom-right-radius: 4px; }
.ui-widget-overlay { background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .3;filter:Alpha(Opacity=30); }
.ui-widget-shadow { margin: -8px 0 0 -8px; padding: 8px; background: #aaaaaa url(images/ui-bg_flat_0_aaaaaa_40x100.png) 50% 50% repeat-x; opacity: .3;filter:Alpha(Opacity=30); -moz-border-radius: 8px; -khtml-border-radius: 8px; -webkit-border-radius: 8px; border-radius: 8px; }
/* Some specific css for juery-ui */
.alert .ui-dialog-titlebar{display:none}
/* The timer script add z-index:1000, then we use 2000, need 3000 for overlay */
.ui-widget-overlay{z-index:5}
.ui-dialog,.ui-datepicker{z-index:5 !important}
/* #Some tools */
.hide{position:absolute;top:auto;left:-999999px}
.nodisplay,.hidden{display:none !important;height: 0;width:0;overflow:hidden;visibility:hidden !important;}
.affix {position: fixed;}
.clearfix:before,.clearfix:after {display: table;content: " ";}
.clearfix:after {clear: both;}
.text-hide {font: 0/0 a;color: transparent;text-shadow: none;}
.js .jshide{display:none}
/* #Layout */
#container{margin:0;} /* Global container */
@media only screen and (max-width: 959px) {}
@media only screen and (min-width: 768px) and (max-width: 959px) {}
@media only screen and (max-width: 767px) {}
@media only screen and (min-width: 479px) and (max-width: 767px) {}
@media only screen and (max-width: 479px) {}
	
.ie6 #container,.ie7 #container{text-align:center}
#content{position:relative;}
.ie6 .wrapper,.ie6 #content,.ie7 .wrapper,.ie7 #content{text-align:left;}
#container{min-height:100%;position:relative;}
.wrapper,#content{margin:0 auto;}
#head:before,#head:after,#content:before,#content:after,.wrapper:before,.wrapper:after{display: table;content: " ";}
#head:after,#content:after,.wrapper:after {clear: both;}
#head{position:relative;}
.head.affix{width:100%;z-index:3;top:0}/*The timer script add inline z-index:1001 .....*/

.head.affix:after
{
   content: " ";
   position: fixed;  
   left: 0;
   width: 100%;
   height: 1px;
   z-index: 3;
   -webkit-box-shadow: 0px 0px 10px rgba(0,0,0,.8);
   -moz-box-shadow: 0px 0px 10px rgba(0,0,0,.8);
   box-shadow: 0px 0px 10px rgba(0,0,0,.8);
   }
#head h1{display:inline;display:inline-block;}
#head img.logo{vertical-align:middle;}
#head img.logo{max-height:4em;width:auto;}
#head a.link-logo:hover,#head a.link-logo:focus,#head a.link-logo:active{background:transparent;}
#head a.link-logo {outline: 0 none;}
.ie6 #head img.logo,.ie7 #head img.logo{height:4em;}
#head .tools{float:right;margin:0.7em 0;}
.cloned-tools .tool{display:inline-block;}
.tool-cloned{display:none}
/* ... */

